// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has toggle--off class applied by default 1`] = `
<button
  class="css-vp4bp7"
  data-test="button"
>
  Toggle Me
</button>
`;

exports[`has toggle--on class applied when initialToggledOn: true 1`] = `
<button
  class="css-15i754"
  data-test="button"
>
  Toggle Me
</button>
`;
